--- a/bookrate/static/list-detail.html
+++ b/bookrate/static/list-detail.html
@@ -57,6 +57,11 @@
                     <span id="listCreated"></span>
                     <span id="bookCount"></span>
                 </div>
+                <div class="mt-4">
+                    <button id="embedBtn" class="btn-secondary hidden">
+                        📤 Embed This List
+                    </button>
+                </div>
             </div>
 
             <div id="emptyList" class="hidden text-center py-12 bg-gray-800 rounded-lg">
