--- a/bookrate/static/profile.html
+++ b/bookrate/static/profile.html
@@ -14,6 +14,7 @@
         <div class="flex items-center space-x-4">
             <a href="books.html" class="hover:text-blue-400 transition">Browse</a>
             <a href="feed.html" class="hover:text-blue-400 transition">Feed</a>
+            <a href="embed.html" class="hover:text-blue-400 transition">Embed</a>
             <a href="profile.html" class="text-blue-400">Profile</a>
             <button id="logoutBtn" class="btn-secondary">Logout</button>
         </div>
