--- a/bookrate/static/index.html
+++ b/bookrate/static/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookmarkD - Discover & Rate Books</title>
+    <!-- SEO Meta Tags -->
+        <meta name="description" content="Track, rate, and share your reading journey. Join thousands of readers discovering their next favorite book on BookmarkD.">
+        <meta name="keywords" content="books, reading, book tracker, book reviews, goodreads alternative, letterboxd for books">
+        <meta name="author" content="BookmarkD">
+        
+        <!-- Open Graph -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://bookmarkd.app">
+        <meta property="og:title" content="BookmarkD - Track Your Reading Journey">
+        <meta property="og:description" content="Rate books, write reviews, and discover your next read. Join the community of book lovers.">
+        <meta property="og:image" content="https://bookmarkd.app/og-image.jpg">
+        
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:url" content="https://bookmarkd.app">
+        <meta name="twitter:title" content="BookmarkD - Track Your Reading Journey">
+        <meta name="twitter:description" content="Rate books, write reviews, and discover your next read.">
+        <meta name="twitter:image" content="https://bookmarkd.app/og-image.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
